# sway-zed-extension

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/sway/: config.toml  highlights.scm
src/: lib.rs
