[package]
name = "sway-zed-extension"
version = "0.1.0"
edition = "2024"
authors = ["Fuel Labs <contact@fuel.sh>"]
description = "Sway language extension for Zed editor"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FuelLabs/sway-zed-extension"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"